@@ -1,3 +1,9 @@
+2007-10-03 Encolpe Degoute <encolpe.degoute@ingeniweb.com>
+
+	* Add minimal support for PloneVocabularyManager
+
+	* Added all ReferenceBrowsr widget properties
+
 2007-03-14 Encolpe Degoute <encolpe.degoute@ingeniweb.com>
 
 	* Added allowed_types property for ReferenceField generation
